# nayuyyyu

./: .gitignore  Codex使用指南_纯文字版.md  README.md  account_pool.py  accounts.example.txt  app.js  config.json  dashboard.html  manage.py  package-lock.json  package.json  start.sh  启动.command
automation/: accounts.example.txt  activate_account.js  add_account.js  anti-detect.js  batch_register.js  chatgpt_account_creator.js  check_quota.js  config.example.json  package-lock.json  package.json  pipeline.js  proxy-pool.js  run-register.js
proxy/: main.py  models.json  pyproject.toml
proxy/codex2api/: __init__.py  __main__.py  models.py  multi_auth.py  request.py  server.py  utils.py
